# kmouth

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  Makefile.am  Messages.sh  configwizard.cpp  configwizard.h  kmouth.cpp  kmouth.desktop  kmouth.h  kmouth.lsm  kmouth.qrc  kmouthrc  kmouthui.rc  main.cpp  optionsdialog.cpp  optionsdialog.h  org.kde.kmouth.appdata.xml  org.kde.kmouth.desktop  phrasebookdialogui.rc  phraseedit.cpp  phraseedit.h  phraselist.cpp  phraselist.h  phraselistitem.cpp  phraselistitem.h  preferencesui.ui  snapcraft.yaml  speech.cpp  speech.h  texttospeechconfigurationui.ui  texttospeechconfigurationwidget.cpp  texttospeechconfigurationwidget.h  texttospeechsystem.cpp  texttospeechsystem.h  version.h
books/: CMakeLists.txt  Makefile.am  ca-courteousness.phrasebook  ca-greetings.phrasebook  ca-howareyou.phrasebook  ca-personal.phrasebook  ca.desktop  de-courteousness.desktop  de-courteousness.phrasebook  de-greetings.phrasebook  de-greetings.stdbook  de-howareyou.desktop  de-howareyou.phrasebook  de-meals.desktop  de-meals.phrasebook  de-personal.desktop  de-personal.phrasebook  de.desktop  en-courteousness.desktop  en-courteousness.phrasebook  en-greetings.phrasebook  en-greetings.stdbook  en-howareyou.desktop  en-howareyou.phrasebook  en-meals.desktop  en-meals.phrasebook  en-meals.stdbook  en-personal.desktop  en-personal.phrasebook  en.desktop  nl-courteousness.phrasebook  nl-greetings.phrasebook  nl-howareyou.phrasebook  nl-personal.phrasebook  nl.desktop  sv-courteousness.phrasebook  sv-greetings.phrasebook  sv-howareyou.phrasebook  sv-personal.phrasebook  sv.desktop
doc/: CMakeLists.txt  Makefile.am  index.docbook  kmouthcpref.eps  kmouthctts.eps  kmouthcwcp.eps  kmouthedit.eps  kmouthmain.eps  kmouthwizard.eps  man-kmouth.1.docbook
icons/: CMakeLists.txt  Makefile.am
icons/app/: CMakeLists.txt  Makefile.am
icons/history/: CMakeLists.txt  Makefile.am
icons/phrase/: CMakeLists.txt  Makefile.am
icons/phrasebook/: CMakeLists.txt  Makefile.am
phrasebook/: CMakeLists.txt  Makefile.am  buttonboxui.ui  initialphrasebookwidget.cpp  initialphrasebookwidget.h  phrasebook.cpp  phrasebook.h  phrasebookdialog.cpp  phrasebookdialog.h  phrasebookdialog.ui  phrasebookdialogui.rc  phrasebookparser.cpp  phrasebookparser.h  phrasebookreader.cpp  phrasebookreader.h  phrasetree.cpp  phrasetree.h
po/ar/: kmouth.po
po/ast/: kmouth.po
po/be/: kmouth.po
po/bg/: kmouth.po
po/br/: kmouth.po
po/bs/: kmouth.po
po/ca/: kmouth.po
po/ca/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/ca@valencia/: kmouth.po
po/cs/: kmouth.po
po/cy/: kmouth.po
po/da/: kmouth.po
po/da/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/de/: kmouth.po
po/de/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/el/: kmouth.po
po/en_GB/: kmouth.po
po/eo/: kmouth.po
po/es/: kmouth.po
po/es/docs/kmouth/: index.docbook  kmouthcpref.eps  kmouthctts.eps  kmouthcwcp.eps  kmouthedit.eps  kmouthmain.eps  kmouthwizard.eps  man-kmouth.1.docbook
po/et/: kmouth.po
po/et/docs/kmouth/: man-kmouth.1.docbook
po/eu/: kmouth.po
po/fa/: kmouth.po
po/fi/: kmouth.po
po/fr/: kmouth.po
po/fr/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/ga/: kmouth.po
po/gl/: kmouth.po
po/he/: kmouth.po
po/hi/: kmouth.po
po/hne/: kmouth.po
po/hr/: kmouth.po
po/hu/: kmouth.po
po/ia/: kmouth.po
po/is/: kmouth.po
po/it/: kmouth.po
po/it/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/ja/: kmouth.po
po/ka/: kmouth.po
po/kk/: kmouth.po
po/km/: kmouth.po
po/ko/: kmouth.po
po/ku/: kmouth.po
po/lt/: kmouth.po
po/lv/: kmouth.po
po/mai/: kmouth.po
po/mk/: kmouth.po
po/ml/: kmouth.po
po/mr/: kmouth.po
po/ms/: kmouth.po
po/nb/: kmouth.po
po/nds/: kmouth.po
po/ne/: kmouth.po
po/nl/: kmouth.po
po/nl/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/nn/: kmouth.po
po/oc/: kmouth.po
po/pa/: kmouth.po
po/pl/: kmouth.po
po/pt/: kmouth.po
po/pt/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/pt_BR/: kmouth.po
po/pt_BR/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/ro/: kmouth.po
po/ru/: kmouth.po
po/ru/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/sa/: kmouth.po
po/se/: kmouth.po
po/sk/: kmouth.po
po/sl/: kmouth.po
po/sl/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/sq/: kmouth.po
po/sr/: kmouth.po
po/sr@ijekavian/: kmouth.po
po/sr@ijekavianlatin/: kmouth.po
po/sr@latin/: kmouth.po
po/sv/: kmouth.po
po/sv/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/ta/: kmouth.po
po/tg/: kmouth.po
po/th/: kmouth.po
po/tr/: kmouth.po
po/ug/: kmouth.po
po/uk/: kmouth.po
po/uk/docs/kmouth/: index.docbook  man-kmouth.1.docbook
po/vi/: kmouth.po
po/zh_CN/: kmouth.po
po/zh_TW/: kmouth.po
wordcompletion/: CMakeLists.txt  Makefile.am  creationsourcedetailsui.ui  creationsourcedetailsui.ui.h  creationsourceui.ui  creationsourceui.ui.h  dictionarycreationwizard.cpp  dictionarycreationwizard.h  kdedocsourceui.ui  kdedocsourceui.ui.h  klanguagebutton.cpp  klanguagebutton.h  klanguagebuttonhelper.cpp  klanguagebuttonhelper.h  wordcompletion.cpp  wordcompletion.h  wordcompletionui.ui  wordcompletionui.ui.h  wordcompletionwidget.cpp  wordcompletionwidget.h  wordlist.cpp  wordlist.h  wordlistui.ui
