####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = history phrase phrasebook 

EXTRA_DIST = hi16-action-speak.png hi16-app-kmouth.png hi22-app-kmouth.png hi32-action-speak.png hi32-app-kmouth.png hi48-action-speak.png hi48-app-kmouth.png lo16-app-kmouth.png lo22-app-kmouth.png lo32-app-kmouth.png hi22-action-speak.png 

install-data-local:
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-speak.png $(kde_icondir)/hicolor/16x16/actions/speak.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/hi16-app-kmouth.png $(kde_icondir)/hicolor/16x16/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/apps/
	$(INSTALL_DATA) $(srcdir)/hi22-app-kmouth.png $(kde_icondir)/hicolor/22x22/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-speak.png $(kde_icondir)/hicolor/32x32/actions/speak.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/hi32-app-kmouth.png $(kde_icondir)/hicolor/32x32/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/actions/
	$(INSTALL_DATA) $(srcdir)/hi48-action-speak.png $(kde_icondir)/hicolor/48x48/actions/speak.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/48x48/apps/
	$(INSTALL_DATA) $(srcdir)/hi48-app-kmouth.png $(kde_icondir)/hicolor/48x48/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/locolor/16x16/apps/
	$(INSTALL_DATA) $(srcdir)/lo16-app-kmouth.png $(kde_icondir)/locolor/16x16/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/locolor/22x22/apps/
	$(INSTALL_DATA) $(srcdir)/lo22-app-kmouth.png $(kde_icondir)/locolor/22x22/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/locolor/32x32/apps/
	$(INSTALL_DATA) $(srcdir)/lo32-app-kmouth.png $(kde_icondir)/locolor/32x32/apps/kmouth.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-speak.png $(kde_icondir)/hicolor/22x22/actions/speak.png

uninstall-local:
	-rm -f $(kde_icondir)/hicolor/16x16/actions/speak.png
	-rm -f $(kde_icondir)/hicolor/16x16/apps/kmouth.png
	-rm -f $(kde_icondir)/hicolor/22x22/apps/kmouth.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/speak.png
	-rm -f $(kde_icondir)/hicolor/32x32/apps/kmouth.png
	-rm -f $(kde_icondir)/hicolor/48x48/actions/speak.png
	-rm -f $(kde_icondir)/hicolor/48x48/apps/kmouth.png
	-rm -f $(kde_icondir)/locolor/16x16/apps/kmouth.png
	-rm -f $(kde_icondir)/locolor/22x22/apps/kmouth.png
	-rm -f $(kde_icondir)/locolor/32x32/apps/kmouth.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/speak.png

####### kdevelop will overwrite this part!!! (end)############
