noinst_LIBRARIES = libwordcompletion.a

INCLUDES = $(all_includes)

libwordcompletion_a_METASOURCES = AUTO

libwordcompletion_a_SOURCES = wordlistui.ui wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp

EXTRA_DIST = wordlistui.ui wordlist.cpp wordlist.h wordcompletion.cpp wordcompletion.h wordcompletionwidget.cpp wordcompletionwidget.h
