



########### install files ###############

install( FILES   DESTINATION  ${DATA_INSTALL_DIR}/kmouth/icons )
kde4_install_icons( ${DATA_INSTALL_DIR}/kmouth/icons  hicolor )



#original Makefile.am contents follow:

######## kdevelop will overwrite this part!!! (begin)##########
#
#
#EXTRA_DIST = hi16-action-phrasehistory_open.png hi16-action-phrasehistory_print.png hi16-action-phrasehistory_save.png hi22-action-phrasehistory_open.png hi22-action-phrasehistory_print.png hi22-action-phrasehistory_save.png hi32-action-phrasehistory_open.png hi32-action-phrasehistory_print.png hi32-action-phrasehistory_save.png 
#
######## kdevelop will overwrite this part!!! (end)############
#
#kmouthiconsdir = $(kde_datadir)/kmouth/icons
#kmouthicons_ICON = AUTO
