####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = hi16-action-phrase.png hi16-action-phrase_new.png hi16-action-phrase_open.png hi16-action-phrase_save.png hi22-action-phrase.png hi22-action-phrase_new.png hi22-action-phrase_open.png hi22-action-phrase_save.png hi32-action-phrase.png hi32-action-phrase_new.png hi32-action-phrase_open.png hi32-action-phrase_save.png 

install-data-local:
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrase.png $(kde_icondir)/hicolor/16x16/actions/phrase.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrase_new.png $(kde_icondir)/hicolor/16x16/actions/phrase_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrase_open.png $(kde_icondir)/hicolor/16x16/actions/phrase_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrase_save.png $(kde_icondir)/hicolor/16x16/actions/phrase_save.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrase.png $(kde_icondir)/hicolor/22x22/actions/phrase.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrase_new.png $(kde_icondir)/hicolor/22x22/actions/phrase_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrase_open.png $(kde_icondir)/hicolor/22x22/actions/phrase_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrase_save.png $(kde_icondir)/hicolor/22x22/actions/phrase_save.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrase.png $(kde_icondir)/hicolor/32x32/actions/phrase.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrase_new.png $(kde_icondir)/hicolor/32x32/actions/phrase_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrase_open.png $(kde_icondir)/hicolor/32x32/actions/phrase_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrase_save.png $(kde_icondir)/hicolor/32x32/actions/phrase_save.png

uninstall-local:
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrase.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrase_new.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrase_open.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrase_save.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrase.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrase_new.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrase_open.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrase_save.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrase.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrase_new.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrase_open.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrase_save.png

####### kdevelop will overwrite this part!!! (end)############
