####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = hi16-action-phrase.png hi16-action-phrase_new.png hi16-action-phrase_open.png hi16-action-phrase_save.png hi22-action-phrase.png hi22-action-phrase_new.png hi22-action-phrase_open.png hi22-action-phrase_save.png hi32-action-phrase.png hi32-action-phrase_new.png hi32-action-phrase_open.png hi32-action-phrase_save.png 

####### kdevelop will overwrite this part!!! (end)############

kmouthiconsdir = $(kde_datadir)/kmouth/icons
kmouthicons_ICON = AUTO
